--- a/healthy/Site2/Equipe.html
+++ b/healthy/Site2/Equipe.html
@@ -66,25 +66,9 @@
 </li></ul>
               </div>
             </div>
-            <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
-          </div>
-        </nav>
-        <div class="custom-expanded u-container-style u-group u-image u-radius-50 u-shape-round u-image-2" data-image-width="1500" data-image-height="807">
-          <div class="u-container-layout u-valign-middle u-container-layout-1">
-            <div class="u-container-align-center u-container-style u-group u-palette-4-base u-preserve-proportions u-shape-circle u-group-2">
-              <div class="u-container-layout u-valign-middle u-container-layout-2">
-                <h2 class="u-align-center u-text u-text-default u-text-1">40%</h2>
-                <h6 class="u-align-center u-text u-text-2">almoço de negócios</h6>
-              </div>
-            </div>
-            <h6 class="u-text u-text-body-alt-color u-text-default u-text-3">Exemplo de Título</h6>
-            <p class="u-text u-text-body-alt-color u-text-4">Imagem de <a href="https://freepik.com" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-4-base u-btn-1">Freepik</a>
-            </p>
-            <h1 class="u-text u-text-body-alt-color u-text-5"> Onde cada ingrediente conta uma história</h1>
-            <a href="#" class="u-border-none u-btn u-button-style u-hover-palette-3-light-2 u-palette-3-base u-btn-2">consulte Mais informação</a>
-          </div>
-        </div>
-      </div></header>
+
+    </header>
+    
     <section class="u-clearfix u-section-1" id="sec-3d95">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <div class="u-container-align-center-md u-container-align-center-sm u-container-align-center-xs u-container-style u-expanded-width u-group u-radius-50 u-shape-round u-white u-group-1">
