--- a/healthy/Site2/index.html
+++ b/healthy/Site2/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="keywords" content="40%, Onde cada ingrediente conta uma história, Veja nosso cardápio, Mantenha-se atualizado conosco, Uma aventura culinária para todos os sentidos, Confira nosso blog, A magia da cozinha, Mantenha-se atualizado conosco, Uma nova forma de experimentar a comida, 40%, Nosso contato">
     <meta name="description" content="">
-    <title>Página Inicial</title>
+    <title>Healthy Bites</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="index.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
@@ -221,20 +221,7 @@
             <!--/blog_post-->
           </div>
           <div class="u-list-control"></div>
-        
-    </section>
-    <section class="u-clearfix u-section-6" id="carousel_bf50">
-      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
-        <div class="u-container-style u-expanded-width u-group u-image u-radius-50 u-shape-round u-image-1" data-image-width="1500" data-image-height="1000">
-          <div class="u-container-layout u-valign-bottom u-container-layout-1">
-            <h6 class="u-text u-text-body-alt-color u-text-default u-text-1">CONTATO</h6>
-            <h2 class="u-text u-text-body-alt-color u-text-2"> Nós fala como foi a sua experiência</h2>
-            <p class="u-text u-text-body-alt-color u-text-default u-text-3">Nos contate.<br style="">
-            </p>
-            <a href="#" class="u-border-none u-btn u-button-style u-hover-palette-3-light-2 u-palette-3-base u-btn-2">consulte Mais informação</a>
-          </div>
-        </div>
-      </div>
+        <hr>
     </section>
     <section class="u-clearfix u-palette-3-base u-section-7" id="carousel_2b61">
       <div class="u-clearfix u-sheet u-sheet-1">
